preEntrega 2, calculo de varios candidatos para el credito

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<html>
 <body>
 
+<h2>Calculadora de créditos</h2>
+
+<p>Por favor, introduzca el número de candidatos a evaluar:</p>
+<input id="numCandidates" type="number">
+
+<button onclick="askForCandidates()">Aceptar</button>
+
+<div id="candidates"></div>
+<div id="results"></div>
 
 <script src="main.js"></script>
+
 </body>
 </html>
