preEntrega 2, calculo de varios candidatos para el credito, mejora filtrado

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <input id="numCandidates" type="number">
 
 <button onclick="askForCandidates()">Aceptar</button>
+<button onclick="MuestraMayorCredito()">Mostrar préstamo más alto</button>
+<div id="mayorCredito"></div>
 
 <div id="candidates"></div>
 <div id="results"></div>
