preEntrega 3, uso de localStorage y mejoras en el boton para mostrar desde alli,

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
 <p>Por favor, introduzca el número de candidatos a evaluar:</p>
 <input id="numCandidates" type="number">
-
 <button onclick="askForCandidates()">Aceptar</button>
+<br><br>
+<button onclick="evaluateCandidates()">Evaluar y Guardar Candidatos</button>
+<button onclick="cargarDatos()">Cargar datos</button>
 <button onclick="MuestraMayorCredito()">Mostrar préstamo más alto</button>
 <div id="mayorCredito"></div>
 
