--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <link href="css/styles.css" rel="stylesheet">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
 <body>
 
-<h2>Calculadora de créditos</h2>
+<div class="container">   
+    <h2>Calculadora de créditos</h2>
+    <div class="form-group">
+        <label for="numCandidates">Por favor, introduzca el número de candidatos a evaluar:</label>
+        <input class="form-control" id="numCandidates" type="number">
+    </div>
+  
+    <button class="btn btn-primary" onclick="askForCandidates()">Aceptar</button>
+    <button class="btn btn-success" onclick="evaluateCandidates()">Evaluar y Guardar Candidatos</button>
+    <button class="btn btn-info" onclick="cargarDatos()">Cargar datos</button>
+    <button class="btn btn-warning" onclick="MuestraMayorCredito()">Mostrar préstamo más alto</button>
+    <button class="btn btn-danger" onclick="limpiarPantalla()">Limpiar pantalla</button> <!-- Botón adicional para limpiar -->
 
-<p>Por favor, introduzca el número de candidatos a evaluar:</p>
-<input id="numCandidates" type="number">
-<button onclick="askForCandidates()">Aceptar</button>
-<br><br>
-<button onclick="evaluateCandidates()">Evaluar y Guardar Candidatos</button>
-<button onclick="cargarDatos()">Cargar datos</button>
-<button onclick="MuestraMayorCredito()">Mostrar préstamo más alto</button>
-<div id="mayorCredito"></div>
 
-<div id="candidates"></div>
-<div id="results"></div>
-
+    <div id="mayorCredito"></div>
+    <div id="candidates"></div>
+    <div id="results"></div>
+</div> 
 <script src="main.js"></script>
 
 </body>
 </html>
+
+
